2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
	  'Bug 405000 - Namespace alias qualifier operator (::) does not
	  trigger code completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Extended persistance
	  unit test to document a bug.

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
	  "Bug 427294 - Code Completion: completion on values returned by
	  methods doesn't work".

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for "Bug
	  427284 - Code Completion: class list shows the full name of
	  classes".

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: Added some unit
	  tests.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* UnitTests.mdp, MonoDevelop.CSharpBinding/TestViewContent.cs,
	  MonoDevelop.CSharpBinding/CodeCompletionTests.cs,
	  MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs, Makefile.am:
	  Added code completion unit tests.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/MemberTests.cs: Extended test constructor
	  test.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/MemberTests.cs: Added member unit tests.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/TopLevelTests.cs: changed compilation unit
	  interface.

2008-09-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added unit a delegate
	  unit test.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/TopLevelTests.cs: Added interface test.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* UnitTests.mdp, MonoDevelop.CSharpBinding,
	  MonoDevelop.CSharpBinding/TopLevelTests.cs, Makefile.am: Added dom